change loader size and fix overflow

--- a/app/assets/stylesheets/editor-3/notifier.css.scss
+++ b/app/assets/stylesheets/editor-3/notifier.css.scss
@@ -5,10 +5,11 @@
 .Notifier {
   @include css3-prefix(hyphens, auto);
   position: relative;
-  margin: 0 -25px;
+  margin: 0 -25px 0 -24px;
   border-top: 1px solid $cSecondaryLine;
   word-wrap: break-word;
   overflow-wrap: break-word;
+  overflow: hidden;
 
   &.is-dark {
     border-color: #3A484E;
@@ -18,6 +19,10 @@
   &:empty {
     display: none;
   }
+  .CDB-Loader {
+    height: 1px;
+  }
+
 }
 
 
